--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,8 +11,8 @@ on:
       - master
 
 jobs:
-  lint: #  golangci:
-    name: lint
+  lint:
+    name: lint-full
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19.x
+          go-version: 1.21.x
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
